--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <style type="text/css">
 
-	.body{
+	body{
 		background-color: lightpink;
 	}
 
-	.p{
+	p{
 		align: center;
 		color: lightblue;
 	}
