--- a/index.html
+++ b/index.html
@@ -1,23 +1,15 @@
-从零开始，做一个自己的网页。
 <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
 	<title>myPages</title>
 </head>
-<style type="text/css">
-
-	body{
-		background-color: lightpink;
-	}
-
-	p{
-		align: center;
-		color: lightblue;
-	}
-	
-</style>
 <body>
-	<p>我的个人随记</p>
+	<p><h1>从零开始，做一个自己的网页。</h1></p>
+	<p align="center" text-color="lightblue">
+		我的个人随记
+	</p>
+	<p>one苹果</p>
+	<img src="苹果.jpg" />
 </body>
 </html>
