--- a/001Basic/index.html
+++ b/001Basic/index.html
@@ -3,13 +3,22 @@
 <head>
 	<meta charset="utf-8">
 	<title>myPages</title>
+	<style type="text/css">
+		body{
+			background-image: url(./images/0.gif);
+			background-size: 100% 100%;
+			height: 100%;
+		}
+		html{
+			height: 100%;
+		}
+	</style>
 </head>
 <body>
 	<p><h1>从零开始，做一个自己的网页。</h1></p>
 	<p align="center" text-color="lightblue">
 		我的个人随记
 	</p>
-	<p>one苹果</p>
-	<img src="./images/苹果.jpg" />
+	<p>one</p>
 </body>
 </html>
