--- a/001Basic/index.html
+++ b/001Basic/index.html
@@ -5,20 +5,25 @@
 	<title>myPages</title>
 	<style type="text/css">
 		body{
-			background-image: url(./images/0.gif);
+			background-color: MediumVioletRed;
 			background-size: 100% 100%;
 			height: 100%;
 		}
 		html{
-			height: 100%;
+			margin: 0;
+			padding: 0;
+		}
+		.image{
+			background: url(./images/0.GIF) no-repeat;
+			align: right;
 		}
 	</style>
 </head>
 <body>
-	<p><h1>从零开始，做一个自己的网页。</h1></p>
-	<p align="center" text-color="lightblue">
-		我的个人随记
-	</p>
-	<p>one</p>
+	<h1>从零开始，做一个自己的网页。</h1>
+	<div>
+		<img src="./images/0.GIF" />
+	</div>
+	<h2 align="center">我的个人随记</h2>
 </body>
 </html>
