--- a/001Basic/index.html
+++ b/001Basic/index.html
@@ -14,14 +14,13 @@
 			padding: 0;
 		}
 		.image{
-			background: url(./images/0.GIF) no-repeat;
 			align: right;
 		}
 	</style>
 </head>
 <body>
 	<h1>从零开始，做一个自己的网页。</h1>
-	<div>
+	<div class="image">
 		<img src="./images/0.GIF" />
 	</div>
 	<h2 align="center">我的个人随记</h2>
