--- a/001Basic/index.html
+++ b/001Basic/index.html
@@ -5,24 +5,19 @@
 	<title>myPages</title>
 	<style type="text/css">
 		body{
-			background-color: MediumVioletRed;
+			background-image: url(./images/0.GIF);
 			background-size: 100% 100%;
 			height: 100%;
 		}
 		html{
+			height: 100%;
 			margin: 0;
 			padding: 0;
-		}
-		.image{
-			align: right;
 		}
 	</style>
 </head>
 <body>
 	<h1>从零开始，做一个自己的网页。</h1>
-	<div class="image">
-		<img src="./images/0.GIF" />
-	</div>
 	<h2 align="center">我的个人随记</h2>
 </body>
 </html>
