--- a/001Basic/index.html
+++ b/001Basic/index.html
@@ -5,7 +5,7 @@
 	<title>myPages</title>
 	<style type="text/css">
 		body{
-			background-image: url(../images/0.GIF);
+			background-image: url(001Basic/images/0.GIF);
 			background-size: 100% 100%;
 			height: 100%;
 		}
