--- a/001Basic/index.html
+++ b/001Basic/index.html
@@ -17,7 +17,7 @@
 	</style>
 </head>
 <body>
-	<h1>从零开始，做一个自己的网页。</h1>
-	<h2 align="center">我的个人随记</h2>
+	<h1>从零开始</h1>
+	<h2 align="center">个人随记</h2>
 </body>
 </html>
