--- a/001Basic/index.html
+++ b/001Basic/index.html
@@ -5,7 +5,7 @@
 	<title>myPages</title>
 	<style type="text/css">
 		body{
-			
+			background-image: url(./images/0.GIF);
 			background-size: 100% 100%;
 			height: 100%;
 		}
@@ -17,7 +17,8 @@
 	</style>
 </head>
 <body>
-	<h1>从零开始</h1>
-	<h2 align="center">个人随记</h2>
+	<h1>从零开始，做一个自己的网页。</h1>
+	<h2 align="center">我的个人随记</h2>
 </body>
 </html>
+
