--- a/001Basic/index.html
+++ b/001Basic/index.html
@@ -21,6 +21,9 @@
 		.top{
 			color: gold;
 		}
+		audio{
+			display: none;
+		}
 		#imag{
 			display: block;
 			position: fixed;
@@ -32,6 +35,10 @@
 <body>
 	<div class="top">
 		<h1>从零开始</h1>
+	</div>
+	<div>
+		<audio autoplay="autoplay" controls="contrls" loop="loop" preload="auto"
+			src="./musics/《So Sick》-Mika.mp3">
 	</div>
 	<div id="imag">
 		<img src="./images/0.GIF" />
