--- a/001Basic/index.html
+++ b/001Basic/index.html
@@ -37,7 +37,7 @@
 		<h1>从零开始</h1>
 	</div>
 	<div>
-		<audio autoplay="autoplay" controls="contrls" loop="loop" preload="auto"
+		<audio autoplay="autoplay" controls="controls" loop="loop" preload="auto"
 			src="./musics/《So Sick》-Mika.mp3">
 	</div>
 	<div id="imag">
