--- a/001Basic/index.html
+++ b/001Basic/index.html
@@ -38,7 +38,7 @@
 	</div>
 	<div>
 		<audio autoplay="autoplay" controls="controls" loop="loop" preload="auto"
-			src="./musics/《So Sick》-Mika.mp3">
+			src="./musics/sosick.mp3">
 	</div>
 	<div id="imag">
 		<img src="./images/0.GIF" />
