--- a/001Basic/index.html
+++ b/001Basic/index.html
@@ -37,8 +37,7 @@
 		<h1>从零开始</h1>
 	</div>
 	<div>
-		<audio autoplay="autoplay" controls="controls" loop="loop" preload="auto"
-			src="./musics/sosick.mp3">
+		<audio src="001Basic/musics/sosick.mp3" autoplay="autoplay" controls="controls" loop="loop" preload="auto"></audio>
 	</div>
 	<div id="imag">
 		<img src="./images/0.GIF" />
