--- a/001Basic/index.html
+++ b/001Basic/index.html
@@ -37,7 +37,7 @@
 		<h1>从零开始</h1>
 	</div>
 	<div>
-		<audio src="./musics/sosick.mp3" autoplay="autoplay" controls="controls" loop="loop" preload="auto"></audio>
+		<audio src="musics/sosick.mp3" autoplay="autoplay" controls="controls" loop="loop" preload="auto"></audio>
 	</div>
 	<div id="imag">
 		<img src="./images/0.GIF" />
