--- a/001Basic/index.html
+++ b/001Basic/index.html
@@ -202,7 +202,7 @@
 			};
 			for (var i = 0; i < Li.length; i++) {
 				Li[i].onclick = function( ){
-					Txt.innerHTML = '<img src="'+this.children[0].src+'" class="img_expression" />';
+					Txt.innerHTML += '<img src="'+this.children[0].src+'" class="img_expression" />';
 					
 				};
 			}
